<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="9000"
        android:id="@+id/meuitem_camerajob_add"
        app:showAsAction="ifRoom|withText"
        android:title="@string/cn_camerajob_add"/>

    <item
        android:orderInCategory="9001"
        android:id="@+id/meuitem_camera_setting"
        app:showAsAction="never"
        android:title="@string/cn_camera_setting"/>

    <item
        android:orderInCategory="9002"
        android:id="@+id/meuitem_camera_test"
        app:showAsAction="never"
        android:title="@string/cn_camera_test"/>

    <item
        android:orderInCategory="9003"
        android:id="@+id/meuitem_silentcamera_test"
        app:showAsAction="never"
        android:title="@string/cn_silentcamera_test"/>

</menu>